[tool.poetry]
name = "pydbutils"
version = "0.2.0"
description = ""
authors = ["Yu Ono <ono.generic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymysql = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
